ParEspresso.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from ParEspresso.y
-----------------------------------------------------------------------------

state 30 contains 1 shift/reduce conflicts.
state 40 contains 1 shift/reduce conflicts.
state 53 contains 8 shift/reduce conflicts.
state 60 contains 1 shift/reduce conflicts.
state 99 contains 1 shift/reduce conflicts.
state 117 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListFunDef                              (4)
	FunDef -> Type Ident '(' ListArg ')' Block         (5)
	ListFunDef -> FunDef                               (6)
	ListFunDef -> FunDef ListFunDef                    (7)
	Arg -> Type Ident                                  (8)
	ListArg ->                                         (9)
	ListArg -> Arg                                     (10)
	ListArg -> Arg ',' ListArg                         (11)
	Block -> '{' ListStmt '}'                          (12)
	ListStmt ->                                        (13)
	ListStmt -> ListStmt Stmt                          (14)
	Stmt -> ';'                                        (15)
	Stmt -> Block                                      (16)
	Stmt -> FunDef                                     (17)
	Stmt -> Type Ident '=' Expr                        (18)
	Stmt -> Ident '=' Expr                             (19)
	Stmt -> Ident '++'                                 (20)
	Stmt -> Ident '--'                                 (21)
	Stmt -> 'return' Expr                              (22)
	Stmt -> 'return'                                   (23)
	Stmt -> 'if' '(' Expr ')' Stmt                     (24)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (25)
	Stmt -> 'while' '(' Expr ')' Stmt                  (26)
	Stmt -> 'for' Type Ident '=' Expr 'to' Expr Block   (27)
	Stmt -> 'print' '(' Expr ')'                       (28)
	Stmt -> Expr                                       (29)
	Type -> 'int'                                      (30)
	Type -> 'string'                                   (31)
	Type -> 'boolean'                                  (32)
	Type -> 'void'                                     (33)
	Type -> Type '(' ListType ')'                      (34)
	ListType ->                                        (35)
	ListType -> Type                                   (36)
	ListType -> Type ',' ListType                      (37)
	Expr7 -> Ident                                     (38)
	Expr7 -> Integer                                   (39)
	Expr7 -> 'true'                                    (40)
	Expr7 -> 'false'                                   (41)
	Expr7 -> Ident '(' ListExpr ')'                    (42)
	Expr7 -> String                                    (43)
	Expr7 -> '(' Expr ')'                              (44)
	Expr6 -> '-' Expr6                                 (45)
	Expr6 -> '!' Expr6                                 (46)
	Expr6 -> Expr7                                     (47)
	Expr4 -> Expr4 MulOp Expr5                         (48)
	Expr4 -> Expr5                                     (49)
	Expr3 -> Expr3 AddOp Expr4                         (50)
	Expr3 -> Expr4                                     (51)
	Expr2 -> Expr2 RelOp Expr3                         (52)
	Expr2 -> Expr3                                     (53)
	Expr1 -> Expr2 LogicOp Expr1                       (54)
	Expr1 -> Expr2                                     (55)
	Expr -> '(' ListArg ')' '=>' Block                 (56)
	Expr -> Expr1                                      (57)
	Expr5 -> Expr6                                     (58)
	ListExpr ->                                        (59)
	ListExpr -> Expr                                   (60)
	ListExpr -> Expr ',' ListExpr                      (61)
	AddOp -> '+'                                       (62)
	AddOp -> '-'                                       (63)
	MulOp -> '*'                                       (64)
	MulOp -> '/'                                       (65)
	MulOp -> '%'                                       (66)
	RelOp -> '<'                                       (67)
	RelOp -> '<='                                      (68)
	RelOp -> '>'                                       (69)
	RelOp -> '>='                                      (70)
	RelOp -> '=='                                      (71)
	RelOp -> '!='                                      (72)
	LogicOp -> '&&'                                    (73)
	LogicOp -> '||'                                    (74)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'=>'           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'boolean'      { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'for'          { PT _ (TS _ 25) }
	'if'           { PT _ (TS _ 26) }
	'int'          { PT _ (TS _ 27) }
	'print'        { PT _ (TS _ 28) }
	'return'       { PT _ (TS _ 29) }
	'string'       { PT _ (TS _ 30) }
	'to'           { PT _ (TS _ 31) }
	'true'         { PT _ (TS _ 32) }
	'void'         { PT _ (TS _ 33) }
	'while'        { PT _ (TS _ 34) }
	'{'            { PT _ (TS _ 35) }
	'||'           { PT _ (TS _ 36) }
	'}'            { PT _ (TS _ 37) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	FunDef          rule  5
	ListFunDef      rules 6, 7
	Arg             rule  8
	ListArg         rules 9, 10, 11
	Block           rule  12
	ListStmt        rules 13, 14
	Stmt            rules 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29
	Type            rules 30, 31, 32, 33, 34
	ListType        rules 35, 36, 37
	Expr7           rules 38, 39, 40, 41, 42, 43, 44
	Expr6           rules 45, 46, 47
	Expr4           rules 48, 49
	Expr3           rules 50, 51
	Expr2           rules 52, 53
	Expr1           rules 54, 55
	Expr            rules 56, 57
	Expr5           rule  58
	ListExpr        rules 59, 60, 61
	AddOp           rules 62, 63
	MulOp           rules 64, 65, 66
	RelOp           rules 67, 68, 69, 70, 71, 72
	LogicOp         rules 73, 74

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Program        goto state 3
	FunDef         goto state 4
	ListFunDef     goto state 5
	Type           goto state 6

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!'            reduce using rule 1
	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'boolean'      reduce using rule 1
	'else'         reduce using rule 1
	'false'        reduce using rule 1
	'for'          reduce using rule 1
	'if'           reduce using rule 1
	'int'          reduce using rule 1
	'print'        reduce using rule 1
	'return'       reduce using rule 1
	'string'       reduce using rule 1
	'to'           reduce using rule 1
	'true'         reduce using rule 1
	'void'         reduce using rule 1
	'while'        reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1
	L_ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListFunDef -> FunDef .                              (rule 6)
	ListFunDef -> FunDef . ListFunDef                   (rule 7)

	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10
	%eof           reduce using rule 6

	FunDef         goto state 4
	ListFunDef     goto state 13
	Type           goto state 6

State 5

	Program -> ListFunDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	FunDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Type -> Type . '(' ListType ')'                     (rule 34)

	'('            shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 11

State 7

	Type -> 'boolean' .                                 (rule 32)

	'('            reduce using rule 32
	')'            reduce using rule 32
	','            reduce using rule 32
	L_ident        reduce using rule 32


State 8

	Type -> 'int' .                                     (rule 30)

	'('            reduce using rule 30
	')'            reduce using rule 30
	','            reduce using rule 30
	L_ident        reduce using rule 30


State 9

	Type -> 'string' .                                  (rule 31)

	'('            reduce using rule 31
	')'            reduce using rule 31
	','            reduce using rule 31
	L_ident        reduce using rule 31


State 10

	Type -> 'void' .                                    (rule 33)

	'('            reduce using rule 33
	')'            reduce using rule 33
	','            reduce using rule 33
	L_ident        reduce using rule 33


State 11

	FunDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 16


State 12

	Type -> Type '(' . ListType ')'                     (rule 34)

	')'            reduce using rule 35
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Type           goto state 14
	ListType       goto state 15

State 13

	ListFunDef -> FunDef ListFunDef .                   (rule 7)

	%eof           reduce using rule 7


State 14

	Type -> Type . '(' ListType ')'                     (rule 34)
	ListType -> Type .                                  (rule 36)
	ListType -> Type . ',' ListType                     (rule 37)

	'('            shift, and enter state 12
	')'            reduce using rule 36
	','            shift, and enter state 21


State 15

	Type -> Type '(' ListType . ')'                     (rule 34)

	')'            shift, and enter state 20


State 16

	FunDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 9
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 17
	ListArg        goto state 18
	Type           goto state 19

State 17

	ListArg -> Arg .                                    (rule 10)
	ListArg -> Arg . ',' ListArg                        (rule 11)

	')'            reduce using rule 10
	','            shift, and enter state 25


State 18

	FunDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 24


State 19

	Arg -> Type . Ident                                 (rule 8)
	Type -> Type . '(' ListType ')'                     (rule 34)

	'('            shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 23

State 20

	Type -> Type '(' ListType ')' .                     (rule 34)

	'('            reduce using rule 34
	')'            reduce using rule 34
	','            reduce using rule 34
	L_ident        reduce using rule 34


State 21

	ListType -> Type ',' . ListType                     (rule 37)

	')'            reduce using rule 35
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Type           goto state 14
	ListType       goto state 22

State 22

	ListType -> Type ',' ListType .                     (rule 37)

	')'            reduce using rule 37


State 23

	Arg -> Type Ident .                                 (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 24

	FunDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 28

	Block          goto state 27

State 25

	ListArg -> Arg ',' . ListArg                        (rule 11)

	')'            reduce using rule 9
	'boolean'      shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Arg            goto state 17
	ListArg        goto state 26
	Type           goto state 19

State 26

	ListArg -> Arg ',' ListArg .                        (rule 11)

	')'            reduce using rule 11


State 27

	FunDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'!'            reduce using rule 5
	'('            reduce using rule 5
	'-'            reduce using rule 5
	';'            reduce using rule 5
	'boolean'      reduce using rule 5
	'else'         reduce using rule 5
	'false'        reduce using rule 5
	'for'          reduce using rule 5
	'if'           reduce using rule 5
	'int'          reduce using rule 5
	'print'        reduce using rule 5
	'return'       reduce using rule 5
	'string'       reduce using rule 5
	'true'         reduce using rule 5
	'void'         reduce using rule 5
	'while'        reduce using rule 5
	'{'            reduce using rule 5
	'}'            reduce using rule 5
	L_ident        reduce using rule 5
	L_integ        reduce using rule 5
	L_quoted       reduce using rule 5
	%eof           reduce using rule 5


State 28

	Block -> '{' . ListStmt '}'                         (rule 12)

	'!'            reduce using rule 13
	'('            reduce using rule 13
	'-'            reduce using rule 13
	';'            reduce using rule 13
	'boolean'      reduce using rule 13
	'false'        reduce using rule 13
	'for'          reduce using rule 13
	'if'           reduce using rule 13
	'int'          reduce using rule 13
	'print'        reduce using rule 13
	'return'       reduce using rule 13
	'string'       reduce using rule 13
	'true'         reduce using rule 13
	'void'         reduce using rule 13
	'while'        reduce using rule 13
	'{'            reduce using rule 13
	'}'            reduce using rule 13
	L_ident        reduce using rule 13
	L_integ        reduce using rule 13
	L_quoted       reduce using rule 13

	ListStmt       goto state 29

State 29

	Block -> '{' ListStmt . '}'                         (rule 12)
	ListStmt -> ListStmt . Stmt                         (rule 14)

	'!'            shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	';'            shift, and enter state 48
	'boolean'      shift, and enter state 7
	'false'        shift, and enter state 49
	'for'          shift, and enter state 50
	'if'           shift, and enter state 51
	'int'          shift, and enter state 8
	'print'        shift, and enter state 52
	'return'       shift, and enter state 53
	'string'       shift, and enter state 9
	'true'         shift, and enter state 54
	'void'         shift, and enter state 10
	'while'        shift, and enter state 55
	'{'            shift, and enter state 28
	'}'            shift, and enter state 56
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 57
	L_quoted       shift, and enter state 58

	Ident          goto state 30
	Integer        goto state 31
	String         goto state 32
	FunDef         goto state 33
	Block          goto state 34
	Stmt           goto state 35
	Type           goto state 36
	Expr7          goto state 37
	Expr6          goto state 38
	Expr4          goto state 39
	Expr3          goto state 40
	Expr2          goto state 41
	Expr1          goto state 42
	Expr           goto state 43
	Expr5          goto state 44

State 30

	Stmt -> Ident . '=' Expr                            (rule 19)
	Stmt -> Ident . '++'                                (rule 20)
	Stmt -> Ident . '--'                                (rule 21)
	Expr7 -> Ident .                                    (rule 38)
	Expr7 -> Ident . '(' ListExpr ')'                   (rule 42)

	'!'            reduce using rule 38
	'!='           reduce using rule 38
	'%'            reduce using rule 38
	'&&'           reduce using rule 38
	'('            shift, and enter state 88
			(reduce using rule 38)

	'*'            reduce using rule 38
	'+'            reduce using rule 38
	'++'           shift, and enter state 89
	'-'            reduce using rule 38
	'--'           shift, and enter state 90
	'/'            reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'='            shift, and enter state 91
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	'boolean'      reduce using rule 38
	'else'         reduce using rule 38
	'false'        reduce using rule 38
	'for'          reduce using rule 38
	'if'           reduce using rule 38
	'int'          reduce using rule 38
	'print'        reduce using rule 38
	'return'       reduce using rule 38
	'string'       reduce using rule 38
	'true'         reduce using rule 38
	'void'         reduce using rule 38
	'while'        reduce using rule 38
	'{'            reduce using rule 38
	'||'           reduce using rule 38
	'}'            reduce using rule 38
	L_ident        reduce using rule 38
	L_integ        reduce using rule 38
	L_quoted       reduce using rule 38


State 31

	Expr7 -> Integer .                                  (rule 39)

	'!'            reduce using rule 39
	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&&'           reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'boolean'      reduce using rule 39
	'else'         reduce using rule 39
	'false'        reduce using rule 39
	'for'          reduce using rule 39
	'if'           reduce using rule 39
	'int'          reduce using rule 39
	'print'        reduce using rule 39
	'return'       reduce using rule 39
	'string'       reduce using rule 39
	'to'           reduce using rule 39
	'true'         reduce using rule 39
	'void'         reduce using rule 39
	'while'        reduce using rule 39
	'{'            reduce using rule 39
	'||'           reduce using rule 39
	'}'            reduce using rule 39
	L_ident        reduce using rule 39
	L_integ        reduce using rule 39
	L_quoted       reduce using rule 39


State 32

	Expr7 -> String .                                   (rule 43)

	'!'            reduce using rule 43
	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	'('            reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'boolean'      reduce using rule 43
	'else'         reduce using rule 43
	'false'        reduce using rule 43
	'for'          reduce using rule 43
	'if'           reduce using rule 43
	'int'          reduce using rule 43
	'print'        reduce using rule 43
	'return'       reduce using rule 43
	'string'       reduce using rule 43
	'to'           reduce using rule 43
	'true'         reduce using rule 43
	'void'         reduce using rule 43
	'while'        reduce using rule 43
	'{'            reduce using rule 43
	'||'           reduce using rule 43
	'}'            reduce using rule 43
	L_ident        reduce using rule 43
	L_integ        reduce using rule 43
	L_quoted       reduce using rule 43


State 33

	Stmt -> FunDef .                                    (rule 17)

	'!'            reduce using rule 17
	'('            reduce using rule 17
	'-'            reduce using rule 17
	';'            reduce using rule 17
	'boolean'      reduce using rule 17
	'else'         reduce using rule 17
	'false'        reduce using rule 17
	'for'          reduce using rule 17
	'if'           reduce using rule 17
	'int'          reduce using rule 17
	'print'        reduce using rule 17
	'return'       reduce using rule 17
	'string'       reduce using rule 17
	'true'         reduce using rule 17
	'void'         reduce using rule 17
	'while'        reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	L_ident        reduce using rule 17
	L_integ        reduce using rule 17
	L_quoted       reduce using rule 17


State 34

	Stmt -> Block .                                     (rule 16)

	'!'            reduce using rule 16
	'('            reduce using rule 16
	'-'            reduce using rule 16
	';'            reduce using rule 16
	'boolean'      reduce using rule 16
	'else'         reduce using rule 16
	'false'        reduce using rule 16
	'for'          reduce using rule 16
	'if'           reduce using rule 16
	'int'          reduce using rule 16
	'print'        reduce using rule 16
	'return'       reduce using rule 16
	'string'       reduce using rule 16
	'true'         reduce using rule 16
	'void'         reduce using rule 16
	'while'        reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	L_ident        reduce using rule 16
	L_integ        reduce using rule 16
	L_quoted       reduce using rule 16


State 35

	ListStmt -> ListStmt Stmt .                         (rule 14)

	'!'            reduce using rule 14
	'('            reduce using rule 14
	'-'            reduce using rule 14
	';'            reduce using rule 14
	'boolean'      reduce using rule 14
	'false'        reduce using rule 14
	'for'          reduce using rule 14
	'if'           reduce using rule 14
	'int'          reduce using rule 14
	'print'        reduce using rule 14
	'return'       reduce using rule 14
	'string'       reduce using rule 14
	'true'         reduce using rule 14
	'void'         reduce using rule 14
	'while'        reduce using rule 14
	'{'            reduce using rule 14
	'}'            reduce using rule 14
	L_ident        reduce using rule 14
	L_integ        reduce using rule 14
	L_quoted       reduce using rule 14


State 36

	FunDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Stmt -> Type . Ident '=' Expr                       (rule 18)
	Type -> Type . '(' ListType ')'                     (rule 34)

	'('            shift, and enter state 12
	L_ident        shift, and enter state 2

	Ident          goto state 87

State 37

	Expr6 -> Expr7 .                                    (rule 47)

	'!'            reduce using rule 47
	'!='           reduce using rule 47
	'%'            reduce using rule 47
	'&&'           reduce using rule 47
	'('            reduce using rule 47
	')'            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	','            reduce using rule 47
	'-'            reduce using rule 47
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'boolean'      reduce using rule 47
	'else'         reduce using rule 47
	'false'        reduce using rule 47
	'for'          reduce using rule 47
	'if'           reduce using rule 47
	'int'          reduce using rule 47
	'print'        reduce using rule 47
	'return'       reduce using rule 47
	'string'       reduce using rule 47
	'to'           reduce using rule 47
	'true'         reduce using rule 47
	'void'         reduce using rule 47
	'while'        reduce using rule 47
	'{'            reduce using rule 47
	'||'           reduce using rule 47
	'}'            reduce using rule 47
	L_ident        reduce using rule 47
	L_integ        reduce using rule 47
	L_quoted       reduce using rule 47


State 38

	Expr5 -> Expr6 .                                    (rule 58)

	'!'            reduce using rule 58
	'!='           reduce using rule 58
	'%'            reduce using rule 58
	'&&'           reduce using rule 58
	'('            reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'+'            reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'/'            reduce using rule 58
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	'boolean'      reduce using rule 58
	'else'         reduce using rule 58
	'false'        reduce using rule 58
	'for'          reduce using rule 58
	'if'           reduce using rule 58
	'int'          reduce using rule 58
	'print'        reduce using rule 58
	'return'       reduce using rule 58
	'string'       reduce using rule 58
	'to'           reduce using rule 58
	'true'         reduce using rule 58
	'void'         reduce using rule 58
	'while'        reduce using rule 58
	'{'            reduce using rule 58
	'||'           reduce using rule 58
	'}'            reduce using rule 58
	L_ident        reduce using rule 58
	L_integ        reduce using rule 58
	L_quoted       reduce using rule 58


State 39

	Expr4 -> Expr4 . MulOp Expr5                        (rule 48)
	Expr3 -> Expr4 .                                    (rule 51)

	'!'            reduce using rule 51
	'!='           reduce using rule 51
	'%'            shift, and enter state 84
	'&&'           reduce using rule 51
	'('            reduce using rule 51
	')'            reduce using rule 51
	'*'            shift, and enter state 85
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            shift, and enter state 86
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'boolean'      reduce using rule 51
	'else'         reduce using rule 51
	'false'        reduce using rule 51
	'for'          reduce using rule 51
	'if'           reduce using rule 51
	'int'          reduce using rule 51
	'print'        reduce using rule 51
	'return'       reduce using rule 51
	'string'       reduce using rule 51
	'to'           reduce using rule 51
	'true'         reduce using rule 51
	'void'         reduce using rule 51
	'while'        reduce using rule 51
	'{'            reduce using rule 51
	'||'           reduce using rule 51
	'}'            reduce using rule 51
	L_ident        reduce using rule 51
	L_integ        reduce using rule 51
	L_quoted       reduce using rule 51

	MulOp          goto state 83

State 40

	Expr3 -> Expr3 . AddOp Expr4                        (rule 50)
	Expr2 -> Expr3 .                                    (rule 53)
